fixing more mobile stuff

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     <div id="hero" class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-1" style="z-index: 2;">
+                <div class="col-md-6 col-md-offset-1" style="z-index: 2; ">
                     <h1>Nabarun Mondal</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Engineer. Shooter. Quoran.</p>
+                        <p class="job-title" style="font-weight: bold; text-decoration: underline;">Engineer. Shooter. Quoran.</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -91,11 +91,13 @@
                 </div>
             
                  <div class="col-md-6 col-md-offset-1" style="z-index: 1;">
-                    <img src="assets/img/quora.png" alt="nabarun-mondal-quora" style="max-width:81%; height: auto"/>
+                    <img src="assets/img/quora.png" alt="nabarun-mondal-quora" 
+                    style="max-width:81%; height: auto ; opacity: 0.3;filter: alpha(opacity=30);"/>
                 </div>
 
                 <div class="col-md-6 text-right" style="z-index: 0;">
-                    <img src="assets/img/books.jpg" alt="nabarun-mondal-library" style="max-width:76%; height: auto"/>
+                    <img src="assets/img/books.jpg" alt="nabarun-mondal-library" 
+                    style="max-width:76%; height: auto; opacity: 0.6;filter: alpha(opacity=30);"/>
                 </div>
 
             </div>
