adding interview process

--- a/index.html
+++ b/index.html
@@ -265,18 +265,18 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                     <!-- 
-                    START COMMENT 
-                    <div class="col-md-4 col-xs-6">
+                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Building Brand @ Hiring</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="assets/pdfs/iv.pdf"><span class="glyphicon glyphicon-link"></span></a>
                             </div>
                         </div>
                     </div>
+                    <!-- 
+                    START COMMENT 
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
@@ -446,14 +446,20 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/Portfolio-4.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-6.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Branding @ Hiring : Interviews?</h4>
+            <p>
+                Organizations are of two types. One who became one brand, and one would would eventually become one.
+                Interviews are the first exposure of potential employees to the brand. While organizations LOVEs to 
+                hire ELITE candidates, most struggle to find the precise meaning of LOVE and ELITE. For the last two decades
+                while conducting thousands of interviews, I have been told hundred of times to give a structure to my interviewing style which is loved by fresh graduates and double decade experienced individuals alike. 
+                This excerpt summarizes the idea of brand building via interview process.
+            </p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="assets/pdfs/iv.pdf" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
