--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                      <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Building Brand @ Hiring</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
