--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="portfolio-item-info">
                                 <h4>Building Brand @ Hiring</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="assets/pdfs/iv.pdf"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="assets/pdfs/iv.pdf" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div>
                         </div>
                     </div>
@@ -459,7 +459,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <a href="assets/pdfs/iv.pdf" class="btn btn-fill">Visit Page</a>
+            <a href="assets/pdfs/iv.pdf" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
