latest CV update

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                          customer satisfaction is an obsession for me.
                          Passionate about 10M Air Pistol shooting.
                         </p>
-                        <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>my cv</a>
+                        <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank">my cv</a>
                     </div>
                 </div>
             </div>
