--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga! Currently Staff Engineer @ Compass.
+                        <p>Hey!! I'm Noga! Currently Senior Staff Engineer @ Compass.
                          Worked with Microsoft, Amazon, LinkedIn &amp; D.E.Shaw & Co.
                          Foundational issues in Computer Science interests me. 
                          Created multiple programming languages for solving business problems.
