updated with latest

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga! Currently Senior Staff Engineer @ Compass.
-                         Worked with Microsoft, Amazon, LinkedIn &amp; D.E.Shaw & Co.
+                        <p>Hey!! I'm Noga! Currently CTO @ Blox.xyz.
+                         Worked with Microsoft, Amazon, LinkedIn, D.E.Shaw & Co, Compass.
                          Foundational issues in Computer Science interests me. 
                          Created multiple programming languages for solving business problems.
                          Love to solve business problems using technology for fun,
@@ -315,7 +315,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="19" data-speed="2000">0</p>
+                        <p class="counter start" data-to="20" data-speed="2000">0</p>
                         <h4>Years Of Technology Delivery</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
