updated zoomba pdf with new location

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <div class="portfolio-item-info">
                                 <h4>DSL For Business Automation</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="assets/pdfs/zoomba.pdf" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="https://gitlab.com/non.est.sacra/zoomba/-/wikis/latex-book/zoomba.pdf" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -443,7 +443,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <a href="assets/pdfs/zoomba.pdf" target="_blank" class="btn btn-fill">Visit Page</a>
+            <a href="https://gitlab.com/non.est.sacra/zoomba/-/wikis/latex-book/zoomba.pdf" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
