--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga! Currently CTO @ Blox.xyz.
-                         Worked with Microsoft, Amazon, LinkedIn, D.E.Shaw & Co, Compass.
+                        <p>
+                         Hey!! I'm Noga!
+                         Presently I am trying to solve the incremental knowledge graph problem.
+                         In the past I have Worked with Microsoft, Amazon, LinkedIn, D.E.Shaw & Co, Compass.
+                         I also worked as CTO for Blox.xyz. 
                          Foundational issues in Computer Science interests me. 
                          Created multiple programming languages for solving business problems.
                          Love to solve business problems using technology for fun,
